--- a/SantaMariaPomeraniasWeb/index.html
+++ b/SantaMariaPomeraniasWeb/index.html
@@ -11,13 +11,14 @@
 	
 	<body>
 		<header>
+			<img src="css/smp.png" alt="logotipo" class="logo">
 			<div class="titulo">
 				<h1>
 					Santa María Pomeranias y Pooddle
 				</h1>
 			</div>
-				<img src="css/logo.jpg" alt="logotipo" class="logo">
 		</header>
+
 		<section>
 			<div class="izquierda">
 				<a href="ListaDeCrías.html">
@@ -44,15 +45,19 @@
 
 			<div class="derecha">
 				<div class="container1">
-					<img src="css/historial.jpeg" class="imagen">
+					<img src="css/historial.png" class="imagen">
 					<div class="texto1">Historial de ventas</div>
 				</div>
 				<div class="container2">
-					<img src="iconoHistorial.jpg" class="imagen">
+					<img src="css/estadisticas.png" class="imagen">
 					<div class="texto1">Estadisticas</div>
 				</div>
 			</div>
 		</section>
+		<footer>
+			<div class="pieDePagina">
+			</div>
+		</footer>
 	</body>
 
 </html>
