Se agregarón páginas.
Agregue la página "Lista de crías" con los elementos de la página Nueva Cría además de modificar el nombre del enlace de nombre "Lista de crías" por "Borrar Cría".

--- a/SantaMariaPomeraniasWeb/index.html
+++ b/SantaMariaPomeraniasWeb/index.html
@@ -36,7 +36,7 @@
 							Actualizar Cría</p>
 					</div>
 				</a>
-				<a href="ListaDeCrías.html">
+				<a href="BorrarCría.html">
 					<div  class="contenedor">
 							Borrar Cria</p>
 					</div>
