--- a/SantaMariaPomeraniasWeb/index.html
+++ b/SantaMariaPomeraniasWeb/index.html
@@ -6,58 +6,98 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<!--Fuente Comfortaa-->
+		<link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
 		<script type="text/javascript"></script>
 	</head>
 	
-	<body>
+	<body background="css/fondo4.jpg">
+		<div class="izquierda">
+			<div class="usuario">
+				<span class="usuario">Administrador</span>
+			</div>
+			<div class="cerrarsesion">
+				<a href="">
+					<div class="botoncerrarsesion">
+						<p>Cerrar Sesión</p>
+					</div>
+				</a>
+			</div>
+		</div>
 		<header>
-			<img src="css/smp.png" alt="logotipo" class="logo">
-			<div class="titulo">
-				<h1>
-					Santa María Pomeranias y Pooddle
-				</h1>
-			</div>
+		<div class="titulo">
+		<h1>www.santamariapomeranias.com</h1>
+		</div>
 		</header>
-
-		<section>
-			<div class="izquierda">
-				<a href="ListaDeCrías.html">
-					<div  class="contenedor">
-							Lista De Crias</p>
+		<div class="derecha">
+			<img src="css/logo2.png" class="logo">
+			<div class="contenedor-botones">
+				<a href="listadecrias.html">
+					<div class="boton">
+						<p>Lista de Crías</p>
 					</div>
 				</a>
-				<a href="NuevaCria.html">
-					<div  class="contenedor">
-							Nueva Cría</p>
+				<a href="nuevacria.html">
+					<div class="boton">
+						<p>Nueva Cría</p>
 					</div>
 				</a>
-				<a href="ActualizarCria.html">
-					<div  class="contenedor">
-							Actualizar Cría</p>
+				<a href="actualizarcria.html">
+					<div class="boton">
+						<p>Actualizar Cría</p>
 					</div>
 				</a>
-				<a href="BorrarCría.html">
-					<div  class="contenedor">
-							Borrar Cria</p>
+				<a href="borrarcria.html">
+					<div class="boton">
+						<p>Borrar Cría</p>
 					</div>
 				</a>
 			</div>
+		</div>
 
-			<div class="derecha">
-				<div class="container1">
-					<img src="css/historial.png" class="imagen">
-					<div class="texto1">Historial de ventas</div>
-				</div>
-				<div class="container2">
-					<img src="css/estadisticas.png" class="imagen">
-					<div class="texto1">Estadisticas</div>
-				</div>
-			</div>
-		</section>
+		<div class="contenedor-redes-sociales">
+			<a href="https://www.facebook.com/Santamaria-pomeranias-y-Poodle-199937020094512/">
+				<img src="css/facebook.png" class="redsocial">
+			</a>
+			<a href="EnDesarrollo.html">
+				<img src="css/instagram.png" class="redsocial">
+			</a>
+			<a href="EnDesarrollo.html">	
+				<img src="css/whatsapp.png" class="redsocial">
+			</a>
+		</div>
+
+		<img src="css/pomeraniaejemplar.png" class="ultimo">
+
 		<footer>
-			<div class="pieDePagina">
+			<div class="opciones-secundarias">
+				<a href="EnDesarrollo.html">
+					<p>avisolegal</p>
+				</a>
+				<a href="EnDesarrollo.html">
+					<p>contacto</p>
+				</a>
+				<a href="EnDesarrollo.html">
+					<p>grupo de desarrollo</p>
+				</a>
+				<a href="EnDesarrollo.html">
+					<p>gestion de notificaciones</p>
+				</a>
+				<a href="EnDesarrollo.html">
+					<p>politica de privacidad</p>
+				</a>
+			</div>
+			<div class="botones">
+				<a href="EnDesarrollo.html">
+				<div class="boton2">
+					<p><img src="css/historial.png" class="mini"> Historial de ventas</p>
+				</div>
+				</a>
+				<a href="EnDesarrollo">
+				<div class="boton3">
+					<p><img src="css/estadisticas.png" class="mini"> Estadisticas del criadero</p>
+				</div>
 			</div>
 		</footer>
 	</body>
-
 </html>
