--- a/SantaMariaPomeraniasWeb/NuevaCria.html
+++ b/SantaMariaPomeraniasWeb/NuevaCria.html
@@ -5,16 +5,20 @@
 		<base href="">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/NuevaCria.css">
+		<link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
 		<script type="text/javascript"></script>
 
 	</head>
-<body>
+<body background="css/fondo4.jpg">
 	<header>
 		<div class="titulo">Lista de Crias</div>
 		<div class="orden">ordenar por: </div>
 		<div class="barraDeBusqueda">Buscar</div>
 	</header>
+	<div class="logo">
+		<img src="css/logo2.png" class="imglogo">
+	</div>
 	<section>
 		<form>
 			
