--- a/SantaMariaPomeraniasWeb/index.html
+++ b/SantaMariaPomeraniasWeb/index.html
@@ -32,12 +32,12 @@
 		<div class="derecha">
 			<img src="css/logo2.png" class="logo">
 			<div class="contenedor-botones">
-				<a href="listadecrias.html">
+				<a href="ListaDeCrías.html">
 					<div class="boton">
 						<p>Lista de Crías</p>
 					</div>
 				</a>
-				<a href="nuevacria.html">
+				<a href="NuevaCria.html">
 					<div class="boton">
 						<p>Nueva Cría</p>
 					</div>
